Add content script and popup for AdBlockX extension
- Implement content-bridge.js to handle communication between popup and AdBlockerX runtime.
- Create popup.html with UI elements for toggling ad blocking, injecting runtime, and managing custom filters.
- Develop popup.js to manage state, handle user interactions, and communicate with the content script.

--- a/chrome-extension/manifest.json
+++ b/chrome-extension/manifest.json
@@ -21,5 +21,12 @@
   "action": {
     "default_title": "AdBlockX Prototype",
     "default_popup": "popup.html"
-  }
+  },
+  "content_scripts": [
+    {
+      "matches": ["<all_urls>"],
+      "js": ["AdBlockerX.js", "content-bridge.js"],
+      "run_at": "document_start"
+    }
+  ]
 }
