--- a/chrome-extension/manifest.json
+++ b/chrome-extension/manifest.json
@@ -7,6 +7,7 @@
     "storage",
     "declarativeNetRequest",
     "declarativeNetRequestWithHostAccess",
+    "activeTab",
     "scripting",
     "tabs"
   ],
